--- a/BettingApp.Web/BettingApp.Web.csproj
+++ b/BettingApp.Web/BettingApp.Web.csproj
@@ -443,6 +443,7 @@
     </Content>
     <Content Include="Scripts\app\main.js" />
     <Content Include="Scripts\build\build.js" />
+    <Content Include="Scripts\build\index.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -450,11 +451,6 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
-    <Content Include="Views\_ViewStart.cshtml" />
-    <None Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
