--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=development webpack --progress --hide-modules",
-    "start": "webpack-dev-server --port 3000 --config webpack.config.js --hot --content-base build --progress --colors"
+    "dev": "webpack-dev-server --hot"
   },
   "keywords": [],
   "author": "",
@@ -23,8 +23,8 @@
     "webpack-dev-server": "^2.11.1"
   },
   "-vs-binding": {
-    "BeforeBuild": [
-      "build"
+    "ProjectOpened": [
+      "dev"
     ]
   }
 }
