--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
@@ -21,10 +22,5 @@
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
-  },
-  "-vs-binding": {
-    "ProjectOpened": [
-      "dev"
-    ]
   }
 }
