--- a/BettingApp.Web/package.json
+++ b/BettingApp.Web/package.json
@@ -1,16 +1,13 @@
 {
   "name": "BettingApp",
   "version": "1.0.0",
-  "description": "> brb",
-  "main": "index.js",
-  "scripts": {
-    "build": "cross-env NODE_ENV=development webpack --progress --hide-modules",
-    "dev": "webpack-dev-server --hot"
-  },
+  "description": "Short betting app with minimal functionalities in WebApi/Vue.js",
+  "main": "main.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aspnet-webpack": "^2.0.3",
     "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -21,6 +18,7 @@
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
