--- a/BettingApp.Domain/BettingApp.Domain.csproj
+++ b/BettingApp.Domain/BettingApp.Domain.csproj
@@ -49,7 +49,11 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AuthRepository.cs" />
-    <Compile Include="Repositories\TestRepository.cs" />
+    <Compile Include="Repositories\MatchRepository.cs" />
+    <Compile Include="Repositories\SportRepository.cs" />
+    <Compile Include="Repositories\TeamRepository.cs" />
+    <Compile Include="Repositories\TransactionRepository.cs" />
+    <Compile Include="Repositories\WalletRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BettingApp.Data\BettingApp.Data.csproj">
