--- a/BettingApp.Domain/BettingApp.Domain.csproj
+++ b/BettingApp.Domain/BettingApp.Domain.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bonus\Bonus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\AuthRepository.cs" />
     <Compile Include="Repositories\MatchRepository.cs" />
