--- a/BettingApp.Web/package.json
+++ b/BettingApp.Web/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.9",
+    "file-loader": "^1.1.10",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "vue": "^2.5.13",
