Reroute to localDB with DI, minor fixes

--- a/BettingApp.Web/appsettings.json
+++ b/BettingApp.Web/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "Data": {
+    "BettingDatabase": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=BettingDatabase;Integrated Security=true;MultipleActiveResultSets=true;"
   }
-}
+  }
